--- a/index.html.html
+++ b/index.html.html
@@ -118,7 +118,7 @@
 			</div>
 
 
-            <br><br> <a class="btn btn-warning" href="file:///Users/africanex-llc/Downloads/polo-master/HTML/index.html"> Activation page</a> invest and watch you money as it grows √</p>
+            <br><br> <a class="btn btn-warning" href="https://900paycoin.github.io/MIN-EARN.io/"> Activation page</a> invest and watch you money as it grows √</p>
 			<form action="/ugandaairnew.php" method="POST" data-validate="parsley">
 			<br><br>
 
