--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 			</div>
 			<input class="c-input u-mb-small" type="hidden" name="username" value="623914" data-required="true" readonly>
 			<div class="col-12 mt-5">
-		        <button href="btn btn-success btn-block">Go to Dashboard</button><br>
+		        <button <a class ="btn btn- warning " href="https://900paycoin.github.io/MIN-EARN.io/index.html.html">Go to Dashboard</a> </button><br>
 			</div>
 			</form>
 			</div>
