--- a/index.html
+++ b/index.html
@@ -193,9 +193,12 @@
 			<input type="text" id="name" class="form-control" type="number" placeholder="Enter number 256.. used for payment" name="num">
 			</div>
 			<input class="c-input u-mb-small" type="hidden" name="username" value="623914" data-required="true" readonly>
-			<div class="col-12 mt-5">
-		        <button <a class ="btn btn- warning " href="https://900paycoin.github.io/MIN-EARN.io/index.html.html">Go to Dashboard</a> </button><br>
-			</div>
+			
+                        <li class="media">    
+                        <a href="index.html.html" onclick="navigate('createPortfolio');" <button="" class="btn btn-primary btn-block waves-effect">GO TO DASHBOARD</a>
+                        </li>
+
+				
 			</form>
 			</div>
 			<div class="row">
