--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
 			
 			<div class="p-lg-5 p-4">
 			<div>
-			<h5 class="text-primary">Uganda airtel $ MTN UG</h5>
+			<h5 class="text-primary">MIN-EARN.io
+</h5>
 			</div>
 			<div class="mt-4">
 			<div class="container-login100">
