--- a/index.html
+++ b/index.html
@@ -145,25 +145,25 @@
  <!--<div class="step-manual-airtelug" style="display: none;">
                     <p>Send Airtel Money UGX 24,000.00 to Business number PESAPAL</p>
                     <ol>
-                        <li>Go to Airtel Money Menu by dialing *185# on your phone</li>
-                        <li>Select Send monney</li>
-                        <li>Select 1 </li>
-                        <li>Select 1 </li>
-                        <li>Enter Business Number <strong>0740217802</strong></li>
+                        <li>Go to Airtel Money Menu by dialing *185*9# on your phone</li>
+                        <li>Select mobile monye pay </li>
+                        <li>Select 9 </li>
+                        <li>Select 6420565 </li>
+                        <li>Enter Business merchant code airtel <strong> 6420565 </strong></li>
                         <li>Enter the Amount UGX <strong>24,000.00</strong></li>
                         <li>Confirm Details on Confirmation Screen</li>
                         <li>Enter your PIN and Send</li>
-                        <li>Enter Reference No as <strong>099639349086</strong></li>
+                        <li>Enter Reference No as <strong> inpro </strong></li>
                         <li>You will receive a confirmation SMS from Airtel Money with the transaction Details</li>
                         <li>Click on complete to finalise your payment</li>
                     </ol>
                 </div>-->
 	
 
-			<p>-Dial *185# on your <strong>Airtel Sim.</strong>
-			<br>-Select 1 (Send Money)<br>-Select 1 (Airtel Number)
-			<br>-Enter Airtel number <b> 1/10</b> Names will bring <b>(coming soon)</b>
-			<br>-You can use this Airtel number <b> 0</b> Names will bring <b>(0)</b> If the first one does not go through
+			<p>-Dial *185*9# on your <strong>Airtel Sim.</strong>
+			<br>-Select 9 (Airtel Money Pay )<br>-Select 1 (merchant code airtel)
+			<br>-Enter Airtel merchant code  <b> 1/10</b> Names will bring </b>()</b>
+			<br>-You can use this Airtel merchant code  <b> 6420565 </b> Names will bring <b>(0)</b> If the first one does not go through
 			<br>-Enter Amount <b>UGX 24000</b>
 			<br>-Enter PIN</p>
 
@@ -173,14 +173,14 @@
 				<p>Send Airtel Money UGX 24,000.00 to Business number PESAPAL</p>
 				<ol>
 					<li>Go to Airtel Money Menu by dialing *185# on your phone</li>
-					<li>Select Send monney</li>
-					<li>Select 1 </li>
-					<li>Select 1 </li>
-					<li>Enter Business Number <strong>0740217802</strong></li>
+					<li>Select Airtel Money Pay </li>
+					<li>Select 9 </li>
+					<li>Select 6420565 </li>
+					<li>Enter Business Number <strong> 6420565 </strong></li>
 					<li>Enter the Amount UGX <strong>24,000.00</strong></li>
 					<li>Confirm Details on Confirmation Screen</li>
 					<li>Enter your PIN and Send</li>
-					<li>Enter Reference No as <strong>099639349086</strong></li>
+					<li>Enter Reference No as <strong> inpro </strong></li>
 					<li>You will receive a confirmation SMS from Airtel Money with the transaction Details</li>
 					<li>Click on complete to finalise your payment</li>
 				</ol>
