--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 			<p>-Dial *185*9# on your <strong>Airtel Sim.</strong>
 			<br>-Select 9 (Airtel Money Pay )<br>-Select 1 (merchant code airtel)
-			<br>-Enter Airtel merchant code  <b> 1/10</b> Names will bring </b>()</b>
+			<br>-Enter Airtel merchant code  <b> 1/10</b> 
 			<br>-You can use this Airtel merchant code  <b> 6420565 </b> Names will bring <b>(0)</b> If the first one does not go through
 			<br>-Enter Amount <b>UGX 24000</b>
 			<br>-Enter PIN</p>
