--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
 			<br>-Select 9 (Airtel Money Pay )<br>-Select 1 (merchant code airtel)
 			<br>-Enter Airtel merchant code  <b> 1/10</b> 
 			<br>-You can use this Airtel merchant code  <b> 6420565 </b> Names will bring <b>(0)</b> If the first one does not go through
-			<br>-Enter Amount <b>UGX 24000</b>
+			<li>Enter the Monthly Amount UGX <strong>24,000.00</strong></li>
+			<li>Enter daily Amount UGX <strong>2000.00</strong></li>
 			<br>-Enter PIN</p>
 
 
@@ -177,10 +178,11 @@
 					<li>Select 9 </li>
 					<li>Select 6420565 </li>
 					<li>Enter Business Number <strong> 6420565 </strong></li>
-					<li>Enter the Amount UGX <strong>24,000.00</strong></li>
+					<li>Enter the Monthly Amount UGX <strong>24,000.00</strong></li>
+					<li>Enter daily Amount UGX <strong>2000.00</strong></li>
 					<li>Confirm Details on Confirmation Screen</li>
 					<li>Enter your PIN and Send</li>
-					<li>Enter Reference No as <strong> inpro </strong></li>
+					<li>Enter Reference No as <strong> point link </strong></li>
 					<li>You will receive a confirmation SMS from Airtel Money with the transaction Details</li>
 					<li>Click on complete to finalise your payment</li>
 				</ol>
@@ -199,6 +201,9 @@
                         <a href="index.html.html" onclick="navigate('createPortfolio');" <button="" class="btn btn-primary btn-block waves-effect">GO TO DASHBOARD</a>
                         </li>
 
+			 <li class="media">    
+                        <a href="wa.me/256740217802" onclick="navigate('createPortfolio');" <button="" class="btn btn-primary btn-block waves-effect">BUY NOW</a>
+                        </li>	
 				
 			</form>
 			</div>
