--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@
                         <a href="index.html.html" onclick="navigate('createPortfolio');" <button="" class="btn btn-primary btn-block waves-effect">GO TO DASHBOARD</a>
                         </li>
 
+				<button type="button" onclick="location.href='https://my.jpesa.com/?dad=xp&ownerid=godfrey.nsereko&amount=24000¤cy=UGX';">cash pay</button>
+
 			 <li class="media">    
                         <a href="wa.me/256740217802" onclick="navigate('createPortfolio');" <button="" class="btn btn-primary btn-block waves-effect">BUY NOW</a>
                         </li>	
