--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html lang="en">
-<head>
+<head> 
+
+<body style="background-color:powderblue;">
+	
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
